# libcommon

./: CMakeLists.txt
.github/workflows/: ctest.yml
include/: array.hpp
src/: array.cpp
